# instagram-personal-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: build_demo.py
scripts/: check_my_posts.py  test_login.py
src/instagram_personal_mcp/: __main__.py  client.py  server.py
tests/: conftest.py  test_server.py
